After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 485139 - The icons in Process list are not compliant with system theme settings.
The icons in Process list are not compliant with system theme settings.
Status: RESOLVED FIXED
Product: system-monitor
Classification: Core
Component: general
3.4.x
Other All
: Normal normal
: ---
Assigned To: System-monitor maintainers
System-monitor maintainers
Depends on:
Blocks:
 
 
Reported: 2007-10-09 17:47 UTC by Calum Benson
Modified: 2013-04-27 21:42 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Calum Benson 2007-10-09 17:47:30 UTC
Punting upstream from OpenSolaris bug database:

*** (#1 of 1): 2006-08-11 04:50:29 IST tim.miao@sun.com
Steps to reproduce:
1. Change system theme to High Contrast Large Print Inverse theme.
2. Invoke gnome-system-monitor and go to Processes tab.

Bug observation:
The icon of process in the process list is not compliant with system theme settings.

Additional info:
The process items are compliant with system theme settings. This will eventually help disability users to distinguish each of them.
The icon in Devices tab is compliant with system theme settings.
Comment 1 Benoît Dejean 2007-10-09 21:12:34 UTC
Icons come from:
- libwnck, just like the application selection applet
- manual lookup using freedesktop categories like internet-mail or utilities-terminal. They are loaded through a GtkIconTheme

Both ways, i don't know what's wrong...
Comment 2 Robert Roth 2012-07-24 20:39:39 UTC
This is still not fixed in 3.4.1. What happens is that on theme change the icons do not get updated automatically, they are only updated if system monitor is restarted. As a workaround, on theme change reinitializing the process list could update the icons (as a restart of system monitor does).
Comment 3 Robert Roth 2013-04-27 21:42:11 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.