Refresh the process list icons on icon theme change. https://bugzilla.gnome.org/show_bug.cgi?id=485139